create tables in mysql

--- a/NeedDesk.Infra.Data/NeedDesk.Infra.Data.csproj
+++ b/NeedDesk.Infra.Data/NeedDesk.Infra.Data.csproj
@@ -5,6 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Scripts\MySqlChangeUtf.sql" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="Scripts\MySqlChangeUtf.sql" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Repositories\" />
   </ItemGroup>
 
