--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,9 @@
 NeedDesk.Application/obj/
 NeedDesk.Infra.Data/obj/
 NeedDesk.Domain/obj/
+NeedDesk.Infra.Data.Tests/obj/
 
 NeedDesk.Application/bin/
 NeedDesk.Infra.Data/bin/
 NeedDesk.Domain/bin/
+NeedDesk.Infra.Data.Tests/bin/
