--- a/NeedDesk.Infra.Data.Tests/NeedDesk.Infra.Data.Tests.csproj
+++ b/NeedDesk.Infra.Data.Tests/NeedDesk.Infra.Data.Tests.csproj
@@ -5,11 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="xunit" Version="2.4.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+    <PackageReference Include="xunit" Version="2.4.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\NeedDesk.Domain\NeedDesk.Domain.csproj" />
+    <ProjectReference Include="..\NeedDesk.Infra.Data\NeedDesk.Infra.Data.csproj" />
   </ItemGroup>
 
 </Project>
