Add app console

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,10 @@ NeedDesk.Application/obj/
 NeedDesk.Infra.Data/obj/
 NeedDesk.Domain/obj/
 NeedDesk.Infra.Data.Tests/obj/
+NeedDesk.ConsoleApp/obj/
 
 NeedDesk.Application/bin/
 NeedDesk.Infra.Data/bin/
 NeedDesk.Domain/bin/
 NeedDesk.Infra.Data.Tests/bin/
+NeedDesk.ConsoleApp/bin/
