--- a/NeedDesk.Application/NeedDesk.Application.csproj
+++ b/NeedDesk.Application/NeedDesk.Application.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <Folder Include="Interfaces\" />
+    <Folder Include="Commands\" />
+    <Folder Include="Queries\" />
     <Folder Include="Services\" />
   </ItemGroup>
 
