--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .vs/
+NeedDesk.Api/obj/
 NeedDesk.Application/obj/
 NeedDesk.Infra.Data/obj/
 NeedDesk.Domain/obj/
@@ -6,6 +7,7 @@ NeedDesk.Infra.Data.Tests/obj/
 NeedDesk.ConsoleApp/obj/
 NeedDesk.Infra.IoC/obj/
 
+NeedDesk.Api/bin/
 NeedDesk.Application/bin/
 NeedDesk.Infra.Data/bin/
 NeedDesk.Domain/bin/
