--- a/NeedDesk.Application/NeedDesk.Application.csproj
+++ b/NeedDesk.Application/NeedDesk.Application.csproj
@@ -1,21 +1,22 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netcoreapp3.1</TargetFramework>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <Folder Include="Commands\" />
-    <Folder Include="Queries\" />
-  </ItemGroup>
+	<ItemGroup>
+		<Folder Include="Commands\" />
+		<Folder Include="Queries\" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="10.1.1" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="AutoMapper" Version="10.1.1" />
+		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="3.2.0" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\NeedDesk.Domain\NeedDesk.Domain.csproj" />
-    <ProjectReference Include="..\NeedDesk.Infra.Data\NeedDesk.Infra.Data.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\NeedDesk.Domain\NeedDesk.Domain.csproj" />
+		<ProjectReference Include="..\NeedDesk.Infra.Data\NeedDesk.Infra.Data.csproj" />
+	</ItemGroup>
 
 </Project>
