--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ NeedDesk.Infra.Data/obj/
 NeedDesk.Domain/obj/
 NeedDesk.Infra.Data.Tests/obj/
 NeedDesk.ConsoleApp/obj/
-NeedDesk.Infra.IoC/obj/
+NeedDesk.Infra.CrossCutting/obj/
 
 NeedDesk.Api/bin/
 NeedDesk.Application/bin/
@@ -13,4 +13,4 @@ NeedDesk.Infra.Data/bin/
 NeedDesk.Domain/bin/
 NeedDesk.Infra.Data.Tests/bin/
 NeedDesk.ConsoleApp/bin/
-NeedDesk.Infra.IoC/bin/
+NeedDesk.Infra.CrossCutting/bin/
