--- a/NeedDesk.Domain/NeedDesk.Domain.csproj
+++ b/NeedDesk.Domain/NeedDesk.Domain.csproj
@@ -10,4 +10,8 @@
     </Reference>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
+  </ItemGroup>
+
 </Project>
