--- a/NeedDesk.Application/NeedDesk.Application.csproj
+++ b/NeedDesk.Application/NeedDesk.Application.csproj
@@ -11,7 +11,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="AutoMapper" Version="10.1.1" />
-		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="3.2.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.9" />
 	</ItemGroup>
 
 	<ItemGroup>
