--- a/NeedDesk.Api.Tests/NeedDesk.Api.Tests.csproj
+++ b/NeedDesk.Api.Tests/NeedDesk.Api.Tests.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="3.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
@@ -14,8 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\NeedDesk.Application\NeedDesk.Application.csproj" />
-    <ProjectReference Include="..\NeedDesk.Infra.CrossCutting\NeedDesk.Infra.CrossCutting.csproj" />
+    <ProjectReference Include="..\NeedDesk.Api\NeedDesk.Api.csproj" />
   </ItemGroup>
 
 </Project>
