--- a/NeedDesk.Api/NeedDesk.Api.csproj
+++ b/NeedDesk.Api/NeedDesk.Api.csproj
@@ -15,5 +15,9 @@
     <ProjectReference Include="..\NeedDesk.Infra.CrossCutting\NeedDesk.Infra.CrossCutting.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Installer\" />
+  </ItemGroup>
+
 
 </Project>
